@@ -11,8 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.6.0</version>
-	<description>COM_WRAPPER_XML_DESCRIPTION
-	</description>
+	<description>COM_WRAPPER_XML_DESCRIPTION</description>
 	<files folder="site">
 		<filename>controller.php</filename>
 		<filename>index.html</filename>
